Istio-sample/Basic-Application/helm/postgres-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
