Istio-sample/Basic-Application/helm/postgresql-client.yaml
---
# Source: postgresql-client/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-client-postgresql-client
  labels:
    helm.sh/chart: postgresql-client-0.1.0
    app.kubernetes.io/name: postgresql-client
    app.kubernetes.io/instance: postgres-client
    app.kubernetes.io/namespace: sample
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: postgresql-client
    app.kubernetes.io/instance: postgres-client
    app.kubernetes.io/namespace: sample
---
# Source: postgresql-client/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-client-postgresql-client
  labels:
    helm.sh/chart: postgresql-client-0.1.0
    app.kubernetes.io/name: postgresql-client
    app.kubernetes.io/instance: postgres-client
    app.kubernetes.io/namespace: sample
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql-client
      app.kubernetes.io/instance: postgres-client
      app.kubernetes.io/namespace: sample
  template:
    metadata:
      labels:
        helm.sh/chart: postgresql-client-0.1.0
        app.kubernetes.io/name: postgresql-client
        app.kubernetes.io/instance: postgres-client
        app.kubernetes.io/namespace: sample
        app.kubernetes.io/version: "0.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: postgres-client-postgresql-client
      securityContext:
        {}
      restartPolicy: Always
      containers:
        - name: postgresql-client
          securityContext:
            {}
          image: "pmaierean/postgresql-client:0.1"
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          command: ["/bin/sh"]
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 256Mi
              cpu: 500m
